<resources>
    <string name="app_name">Jokenpo</string>
    <string name="x">X</string>
    <string name="tesoura">TESOURA</string>
    <string name="papel">PAPEL</string>
    <string name="pedra">PEDRA</string>
    <string name="vs">VS</string>
    <string name="placar">placar</string>
    <string name="placar01">placar01</string>
    <string name="placar02">placar02</string>
    <string name="_0">0</string>
    <string name="ganhe_do_e_t_nesse_jokenpo">text</string>
    <string name="derrote_seu_oponente">Derrote seu oponente</string>
</resources>
